replaced get index of0 with get first